--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta property="og:title" content="Azimah Cold Foods Ltd." />
+<meta property="og:description" content="Azimah Cold Food Store Nigeria Limited is a vibrant business that began its journey in 2014. Located at the Mandate exit gate in Ilorin, Kwara State, Nigeria, it has swiftly established itself as a prominent player in the frozen food market." />
+<meta property="og:image" content="/screenshot.png" />
+<meta property="og:url" content="The URL of your web page" />
     <link rel="icon" type="image/svg+xml" href="/frost.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
